--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.4",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12",
     "zod": "^4.2.1"
   }
 }
