--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "dependencies": {
     "@types/nodemailer": "^7.0.4",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "form-data": "^4.0.5",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "node-cron": "^4.2.1",
